<resources>
    <string name="app_name">Sms Position</string>
    <string name="db_name">geosms2.db</string>
    <string name="prefix">via Sms Position app:\n http://maps.google.com/maps?q</string>
    <string name="title_activity_sms_list">Position History</string>
    <string name="to_sms">History</string>
    <string name="to_send">Send Position</string>
    <string name="title_activity_send_position">Send Position</string>
    <string name="phone_hint">Phone number</string>
    <string name="send">Send</string>
    <string name="waiting">Waiting for position</string>
    <string name="recent">Recent contacts:</string>
    <string name="pick_contact">Pick contact</string>
    <string name="no_history">No history</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="delete_database">Reset database</string>
    <string name="code">Position request</string>
    <string name="reload">Reload</string>
    <string name="informations">Information:\n
        This is an open source project:\n
        https://github.com/mouuff/Sms-Location\n
        \n
        I don\'t have access to any position you are sending or receiving.\n
        This app doesn\'t have backgroup process.\n
        \n
        For more information, contact me with the button below.\n
    </string>
    <string name="warning">
        This app is using SMS to communicate,\n
        With the current settings anyone can access your position by SMS\n
        You can turn off sharing position in the options to prevent unwanted cost\n
        and only use this application to send your position\n
    </string>
    <string name="contact_me">Contact me</string>
    <string name="sent">Sms sent!</string>
    <string name="not_sent">Did not send sms:\n</string>
    <string name="warning_reset">Are you sure you want to reset database?</string>
    <string name="new_position">New position!</string>
    <string name="request_position">Position request!</string>
</resources>
