<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mou.smslocation.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_send"
        android:id="@+id/to_send"
        android:drawableTop="@android:drawable/ic_menu_send"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_sms"
        android:id="@+id/to_list"
        android:drawableTop="@android:drawable/ic_menu_sort_by_size"
        android:layout_alignTop="@+id/to_send"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:id="@+id/to_info"
        android:layout_below="@+id/to_list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableTop="@android:drawable/ic_menu_help"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/to_settings"
        android:layout_alignTop="@+id/to_info"
        android:layout_alignRight="@+id/to_send"
        android:drawableTop="@android:drawable/ic_menu_manage"
        android:layout_alignEnd="@+id/to_send" />

</RelativeLayout>
